--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,7 @@
     "build": "tsc",
     "serve": "yarn build && firebase serve --only functions",
     "shell": "yarn build && firebase functions:shell",
-    "start": "yarn shell",
+    "start": "ts-node-dev --respawn --transpileOnly ./src/index.ts",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -33,16 +33,28 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/morgan": "^1.7.37",
-    "@typescript-eslint/eslint-plugin": "^2.13.0",
-    "@typescript-eslint/parser": "^2.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
     "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-json": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
     "firebase-functions-test": "^0.1.6",
     "husky": "^3.1.0",
+    "prettier": "^1.19.1",
+    "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^5.12.0",
     "typescript": "^3.7.4"
   },
   "_moduleAliases": {
-    "_responses": "lib/responses"
+    "_responses": "lib/responses",
+    "_logger": "lib/logger"
   },
   "husky": {
     "hooks": {
