--- a/functions/.eslintrc
+++ b/functions/.eslintrc
@@ -2,7 +2,7 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["prettier", "@typescript-eslint"],
   "extends": [
-    "airbnb",
+    "airbnb-base",
     "eslint:recommended",
     "plugin:import/errors",
     "plugin:import/warnings",
@@ -24,7 +24,6 @@
     }
   },
   "rules": {
-    "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
     "import/no-extraneous-dependencies": [2, { "devDependencies": ["**/test.tsx", "**/test.ts"] }],
     "@typescript-eslint/indent": [2, 2],
     "import/extensions": [
