--- a/functions/package.json
+++ b/functions/package.json
@@ -10,20 +10,21 @@
     "build": "tsc",
     "serve": "yarn build && firebase serve --only functions",
     "shell": "yarn build && firebase functions:shell",
-    "start": "ts-node-dev --respawn --transpileOnly ./src/index.ts",
+    "start": "nodemon --watch 'src/**/*.ts' --watch 'src/**/*.json' --watch '**/*.env' --exec 'ts-node' ./src/main.ts",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
     "node": "10"
   },
-  "main": "lib/index.js",
+  "main": "lib/main.js",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
+    "geofirestore": "^3.3.1",
     "module-alias": "^2.2.2",
     "morgan": "^1.9.1",
     "uuid": "^3.3.3",
@@ -36,7 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^2.0.0",
@@ -44,11 +45,11 @@
     "eslint-plugin-json": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0",
     "firebase-functions-test": "^0.1.6",
     "husky": "^3.1.0",
+    "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
-    "ts-node-dev": "^1.0.0-pre.44",
+    "ts-node": "^8.5.4",
     "tslint": "^5.12.0",
     "typescript": "^3.7.4"
   },
