--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,6 +1,6 @@
 ## Compiled JavaScript files
-**/*.js
-**/*.js.map
+**/lib/*.js
+**/lib/*.js.map
 
 # Typescript v1 declaration files
 typings/
@@ -10,4 +10,4 @@ node_modules/
 **/.DS_Store
 
 # Firebase service accounts
-**/*serviceAccount.json
+**/*service-account.json
