--- a/functions/.eslintrc
+++ b/functions/.eslintrc
@@ -19,7 +19,8 @@
           ["_responses", "./src/responses"],
           ["_logger", "./src/logger"],
           ["_firebase", "./src/firebase"],
-          ["_models", "./src/models"]
+          ["_models", "./src/models"],
+          ["_middlewares", "./src/middlewares"]
         ],
         "extensions": [".ts", ".js", ".json"]
       }
